# 4.1.1 * **SimpleObjectMapper**     * cleanup * **DataStorage**     * store history as compact json