@@ -16,52 +16,53 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class FileSystemFactoryStorageHistory<R extends FactoryBase<?,R>> {
+public class FileSystemFactoryStorageHistory<R extends FactoryBase<?, R>> {
 
     private static final org.slf4j.Logger logger = LoggerFactory.getLogger(FileSystemFactoryStorageHistory.class);
 
-    private final Map<String,StoredDataMetadata> cache = new TreeMap<>();
+    private final Map<String, StoredDataMetadata> cache = new TreeMap<>();
     private final Path historyDirectory;
     private final MigrationManager<R> migrationManager;
     private final int maxConfigurationHistory;
+    private final SimpleObjectMapper objectMapper;
 
 
-    public FileSystemFactoryStorageHistory(Path basePath, MigrationManager<R> migrationManager) {
-        this(basePath,migrationManager,Integer.MAX_VALUE);
+    public FileSystemFactoryStorageHistory(Path basePath, MigrationManager<R> migrationManager, SimpleObjectMapper objectMapper) {
+        this(basePath, migrationManager, objectMapper, Integer.MAX_VALUE);
     }
 
-    public FileSystemFactoryStorageHistory(Path basePath, MigrationManager<R> migrationManager, int maxConfigurationHistory){
+    public FileSystemFactoryStorageHistory(Path basePath, MigrationManager<R> migrationManager, SimpleObjectMapper objectMapper, int maxConfigurationHistory) {
         this.migrationManager = migrationManager;
-        historyDirectory= basePath.resolve("history");
+        this.historyDirectory = basePath.resolve("history");
         this.maxConfigurationHistory = maxConfigurationHistory;
-        if (!Files.exists(historyDirectory)){
+        this.objectMapper = objectMapper;
+        if (!Files.exists(historyDirectory)) {
             try {
                 Files.createDirectories(historyDirectory);
             } catch (IOException e) {
-                throw new IllegalStateException("Unable to create path"+historyDirectory.toFile().getAbsolutePath(),e);
+                throw new IllegalStateException("Unable to create path" + historyDirectory.toFile().getAbsolutePath(), e);
             }
         }
     }
 
     public R getHistoryFactory(String id) {
-        StoredDataMetadata storedDataMetadata=null;
-        for(StoredDataMetadata metaData: getHistoryFactoryList()){
-            if (metaData.id.equals(id)){
-                storedDataMetadata=metaData;
+        StoredDataMetadata storedDataMetadata = null;
+        for (StoredDataMetadata metaData : getHistoryFactoryList()) {
+            if (metaData.id.equals(id)) {
+                storedDataMetadata = metaData;
 
             }
         }
-        if (storedDataMetadata==null) {
-            throw new IllegalStateException("cant find storedDataMetadata for factory: "+id+" in history");
+        if (storedDataMetadata == null) {
+            throw new IllegalStateException("cant find storedDataMetadata for factory: " + id + " in history");
         }
-        return migrationManager.read(readFile(Paths.get(historyDirectory.toString()+"/"+id+".json")),storedDataMetadata.dataStorageMetadataDictionary);
+        return migrationManager.read(readFile(Paths.get(historyDirectory.toString() + "/" + id + ".json")), storedDataMetadata.dataStorageMetadataDictionary);
     }
 
-    private void visitHistoryFiles(Consumer<Path> visitor){
-        try (Stream<Path> files = Files.walk(historyDirectory).filter(Files::isRegularFile)){
+    private void visitHistoryFiles(Consumer<Path> visitor) {
+        try (Stream<Path> files = Files.walk(historyDirectory).filter(Files::isRegularFile)) {
             files.forEach(visitor);
         } catch (IOException e) {
             throw new RuntimeException(e);
@@ -71,27 +72,27 @@ public class FileSystemFactoryStorageHistory<R extends FactoryBase<?,R>> {
     public Collection<StoredDataMetadata> getHistoryFactoryList() {
         if (cache.isEmpty()) {
             visitHistoryFiles(path -> {
-                    if (path.toString().endsWith("_metadata.json")){
-                        StoredDataMetadata storedDataMetadata = migrationManager.readStoredFactoryMetadata(readFile(path));
-                        cache.put(storedDataMetadata.id, storedDataMetadata);
-                    }
+                if (path.toString().endsWith("_metadata.json")) {
+                    StoredDataMetadata storedDataMetadata = migrationManager.readStoredFactoryMetadata(readFile(path));
+                    cache.put(storedDataMetadata.id, storedDataMetadata);
+                }
             });
         }
         return cache.values();
     }
 
     public void updateHistory(R factoryRoot, StoredDataMetadata metadata) {
-        String id=metadata.id;
+        String id = metadata.id;
 
-        writeFile(Paths.get(historyDirectory.toString()+"/"+id+".json"), migrationManager.write(factoryRoot, OutputStyle.COMPACT));
-        writeFile(Paths.get(historyDirectory.toString()+"/"+id+"_metadata.json"), migrationManager.writeStorageMetadata(metadata));
-        cache.put(id,metadata);
+        writeFile(historyDirectory.resolve(id + ".json"), objectMapper.writeValueAsString(factoryRoot, OutputStyle.COMPACT));
+        writeFile(historyDirectory.resolve(id + "_metadata.json"), objectMapper.writeValueAsString(metadata, OutputStyle.COMPACT));
+        cache.put(id, metadata);
 
         houseKeeping();
 
     }
 
-    private String readFile(Path path){
+    private String readFile(Path path) {
         try {
             return Files.readString(path);
         } catch (IOException e) {
@@ -99,54 +100,53 @@ public class FileSystemFactoryStorageHistory<R extends FactoryBase<?,R>> {
         }
     }
 
-    private void writeFile(Path path, String content){
+    private void writeFile(Path path, String content) {
         try {
-            Files.writeString(path,content);
+            Files.writeString(path, content);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    public void patchAll(DataStoragePatcher consumer, SimpleObjectMapper simpleObjectMapper) {
+    public void patchAll(DataStoragePatcher consumer) {
         visitHistoryFiles(path -> {
-            if (!path.toString().endsWith("_metadata.json")){
-                JsonNode data = simpleObjectMapper.readTree(path);
+            if (!path.toString().endsWith("_metadata.json")) {
+                JsonNode data = objectMapper.readTree(path);
                 Path metadataPath = path.resolveSibling(path.getParent().resolve(path.getFileName().toString().replace(".json", "_metadata.json")));
-                JsonNode metadata = simpleObjectMapper.readTree(metadataPath);
-                consumer.patch((ObjectNode) data,metadata,simpleObjectMapper);
-                writeFile(path,simpleObjectMapper.writeTree(data));
-                writeFile(metadataPath,simpleObjectMapper.writeTree(metadata));
+                JsonNode metadata = objectMapper.readTree(metadataPath);
+                consumer.patch((ObjectNode) data, metadata, objectMapper);
+                writeFile(path, objectMapper.writeValueAsString(data, OutputStyle.COMPACT));
+                writeFile(metadataPath, objectMapper.writeValueAsString(metadata, OutputStyle.COMPACT));
             }
         });
     }
 
-    public void patchForId(DataStoragePatcher consumer, SimpleObjectMapper simpleObjectMapper, String id) {
+    public void patchForId(DataStoragePatcher consumer, String id) {
         visitHistoryFiles(path -> {
-            if (!path.toString().endsWith("_metadata.json") && (id + ".json").equals(path.getFileName().toString())){
-                JsonNode data = simpleObjectMapper.readTree(path);
+            if (!path.toString().endsWith("_metadata.json") && (id + ".json").equals(path.getFileName().toString())) {
+                JsonNode data = objectMapper.readTree(path);
                 Path metadataPath = path.resolveSibling(path.getParent().resolve(path.getFileName().toString().replace(".json", "_metadata.json")));
-                JsonNode metadata = simpleObjectMapper.readTree(metadataPath);
-                consumer.patch((ObjectNode) data,metadata,simpleObjectMapper);
-                writeFile(path,simpleObjectMapper.writeTree(data));
-                writeFile(metadataPath,simpleObjectMapper.writeTree(metadata));
+                JsonNode metadata = objectMapper.readTree(metadataPath);
+                consumer.patch((ObjectNode) data, metadata, objectMapper);
+                writeFile(path, objectMapper.writeValueAsString(data, OutputStyle.COMPACT));
+                writeFile(metadataPath, objectMapper.writeValueAsString(metadata, OutputStyle.COMPACT));
             }
         });
     }
 
     private void houseKeeping() {
-        if (maxConfigurationHistory == Integer.MAX_VALUE)
-            return;
-        List<StoredDataMetadata> collect = getHistoryFactoryList().stream().collect(Collectors.toList());
-        int numToRemove = collect.size()-maxConfigurationHistory;
+        if (maxConfigurationHistory == Integer.MAX_VALUE) {return;}
+        List<StoredDataMetadata> collect = getHistoryFactoryList().stream().toList();
+        int numToRemove = collect.size() - maxConfigurationHistory;
         if (numToRemove > 0) {
             collect.stream().sorted(Comparator.comparing(a -> a.creationTime)).limit(numToRemove).forEach(smd -> {
                 if (!smd.isInitialFactory()) {
                     try {
-                        Files.deleteIfExists(Paths.get(historyDirectory.toString() + "/" + smd.id + ".json"));
-                        Files.deleteIfExists(Paths.get(historyDirectory.toString() + "/" + smd.id + "_metadata.json"));
+                        Files.deleteIfExists(historyDirectory.resolve(smd.id + ".json"));
+                        Files.deleteIfExists(historyDirectory.resolve(smd.id + "_metadata.json"));
                         cache.remove(smd.id);
-                    } catch (IOException ohno) {
-                        logger.warn("Could not remove configration files", ohno);
+                    } catch (IOException e) {
+                        logger.warn("Could not remove configuration files", e);
                     }
                 }
             });
